--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -271,10 +271,10 @@ Anything that we considered an incorrect behavior. Something that was not workin
 
 Task may be associated into Epics or Stories to form complex features.
 
-- `NIM-18921` -- Medium -- [backend] make links in diagram bi-directional
-- `NIM-18948` -- High -- [BE] Perform MAC lookup for traffic sending over manual link
+- `NIM-18921` -- Medium -- make links in diagram bi-directional
+- `NIM-18948` -- High -- Perform MAC lookup for traffic sending over manual link
 - `NIM-18958` -- High -- Bidirectional manual links create loops
-- `NIM-19028` -- Medium -- [backend] Manual link constrain validation - avoid create two links between same devices and same ports, links are bidirectional by default
+- `NIM-19028` -- Medium -- Manual link constrain validation - avoid create two links between same devices and same ports, links are bidirectional by default
 - `NIM-19210` -- Medium -- Allow discovery for Cloud Managed Catalyst switches
 
 ## 7.3.4
@@ -638,14 +638,14 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-16192` -- Low -- Implement List floating container
 - `NIM-16193` -- High -- Update management configuration for easier current-previous configuration comparison
 - `NIM-16592` -- Low -- Frontend libyear drift reduction 7.2
-- `NIM-16748` -- Medium -- [NAE] Add virtual wire support for Forcepoint
+- `NIM-16748` -- Medium -- Add virtual wire support for Forcepoint
 - `NIM-16856` -- Medium -- Checkpoint - Parsing config for URL Filter related parts
 - `NIM-16859` -- Medium -- Juniper - Parsing config for URL Filter related parts
 - `NIM-16862` -- Medium -- Investigate bringing Typescript types to API endpoints
 - `NIM-16944` -- Medium -- Remove deprecated tables from UI [7.3]
-- `NIM-16947` -- Medium -- [backend] Implement manual link on API
-- `NIM-16948` -- Medium -- [FE] Implement manual link on frontend - UI skeleton
-- `NIM-16949` -- Medium -- [backend] Implement manual link in E2E
+- `NIM-16947` -- Medium -- Implement manual link on API
+- `NIM-16948` -- Medium -- Implement manual link on frontend - UI skeleton
+- `NIM-16949` -- Medium -- Implement manual link in E2E
 - `NIM-16983` -- Medium -- Allow ACI endpoints to serve as discovery IP seeds by default
 - `NIM-17023` -- Medium -- Add option to overwrite admin password
 - `NIM-17035` -- Medium -- Refactor OsVersion validation to Zod
@@ -654,9 +654,9 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-17187` -- Medium -- Remove sensitive information - osVersions
 - `NIM-17259` -- Medium -- Extend the table filter component, based on Devices columns, to include Uptime [7.3 candidate]
 - `NIM-17403` -- High -- Create ipf-discovery-after-restart service
-- `NIM-17446` -- Medium -- [backend] Update eEdge collection from manual link topology
+- `NIM-17446` -- Medium -- Update eEdge collection from manual link topology
 - `NIM-17462` -- Medium -- Discovery Tasks Settings Doc - Has not been updated to include ACI Endpoints
-- `NIM-17523` -- Medium -- [NAE] Get ts from DHL, analyze and test.
+- `NIM-17523` -- Medium -- Get ts from customer, analyze and test.
 - `NIM-17526` -- Medium -- Add support for Neighbor discovery on Cisco ASA
 - `NIM-17527` -- Medium -- Add support for IPv6 AAA on Cisco IOS-XE
 - `NIM-17528` -- Medium -- Add support for IPv6 AAA on Cisco ASA
@@ -710,8 +710,8 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-17879` -- Medium -- Remove public IP from test case added in NIM-17823
 - `NIM-17881` -- Medium -- Make backend-shared/discovery folder follow the extensions code structure
 - `NIM-17882` -- Medium -- Make backend-shared/manual-links folder follow the extensions code structure
-- `NIM-17885` -- Medium -- [FE] Implement autocompletes on manual link form in Discovery Settings
-- `NIM-17886` -- Medium -- [FE] Implement manual link on frontend - graphs
+- `NIM-17885` -- Medium -- Implement autocompletes on manual link form in Discovery Settings
+- `NIM-17886` -- Medium -- Implement manual link on frontend - graphs
 - `NIM-17889` -- Medium -- Credentials Settings - Use for configuration management - turn on by default
 - `NIM-17925` -- Medium -- Revert the removal of several GitLab CI actions
 - `NIM-17928` -- Medium -- Palo Alto - EDL support for iplist and predefined-iplist [7.3]
@@ -737,11 +737,11 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-18215` -- Medium -- Add the original error text and UUID to Sentry errors
 - `NIM-18216` -- Medium -- Add support for IPv6 IPsec on Cisco IOS-XE
 - `NIM-18221` -- Highest -- BGP Advertised Routes - Cisco NX-OS
-- `NIM-18225` -- High -- [FE] Implement manual link table with statuses in Snapshot Settings
+- `NIM-18225` -- High -- Implement manual link table with statuses in Snapshot Settings
 - `NIM-18379` -- Medium -- Adding overrides to newly added ipv6 columns
-- `NIM-18438` -- Medium -- [backend] Implement API endpoint for manual links to override snapshot settings with global settings
+- `NIM-18438` -- Medium -- Implement API endpoint for manual links to override snapshot settings with global settings
 - `NIM-18456` -- Medium -- Preserve the messageType field in JSON log messages
-- `NIM-18467` -- Medium -- [FE] Connect Override with global settings button to API on Snapshot Settings and provide final texts
+- `NIM-18467` -- Medium -- Connect Override with global settings button to API on Snapshot Settings and provide final texts
 - `NIM-18495` -- Medium -- Extend Refresh Snapshot/Add Device with IPv6
 - `NIM-18497` -- Medium -- Mask all sensitive data in CLI clients with the same value unless in development mode
 - `NIM-18502` -- Medium -- Preserve the additional data structure in JSON logs
@@ -753,7 +753,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-18552` -- Medium -- Adjust Select and MultiSelect prop interface types
 - `NIM-18588` -- Medium -- Azure VNET - VM Public IP Addresses cleanup
 - `NIM-18597` -- Highest -- Detect query warnings is testing and discovery when FF enabled
-- `NIM-18600` -- Medium -- [FE] Replace dummy page text and add feature flag to dedicated env file
+- `NIM-18600` -- Medium -- Replace dummy page text and add feature flag to dedicated env file
 - `NIM-18610` -- Medium -- Refactor Hook Form wrapper components to reduce code duplicities
 - `NIM-18626` -- High -- IPv6 GUI - Update description/examples
 - `NIM-18631` -- High -- Add missing Login Ip for ipv6 devices
