--- a/docs/releases/release_notes_low-level/7.x/7.5.md
+++ b/docs/releases/release_notes_low-level/7.x/7.5.md
@@ -6,7 +6,7 @@ search:
 
 # LLRN 7.5
 
-These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 781 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 782 fixed issues.
 
 ## 7.5.5
 
@@ -57,7 +57,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-21002` -- High -- API clients to not destroy on a data request's Authorization error
 - `NIM-21015` -- High -- BGP Advertised Routes still failing
 - `NIM-21037` -- Medium -- getFhrpGroupMembersTable - MISMATCHED objects with same itemId
-- `NIM-21059` -- Highest -- Configuration import does not overwrite the discovery settings
 
 ### Tasks
 
@@ -66,7 +65,9 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-19050` -- Medium -- 10 - Moderate - Broken Access Controls
 - `NIM-20231` -- Medium -- Relculate intent checks after import is successful
 - `NIM-20350` -- Low -- Fix failing tests for table management/snmp/communities (valid)
+- `NIM-20356` -- Low -- Fix failing tests for table settings/ports (valid)
 - `NIM-20386` -- Medium -- Fix partitions for calcFromApClientsWhichAreNotInArp
+- `NIM-20389` -- Medium -- Fix partitions for getDeviceAttributeValues
 - `NIM-20395` -- Medium -- Fix partitions for getMplsL2VpnPseudowiresTable
 - `NIM-20396` -- Medium -- Fix partitions for getPlatformsClusterSrxTable
 - `NIM-20397` -- Medium -- Fix partitions for getRoutingProtocolsOspfNeighborsTable
@@ -282,7 +283,7 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-18154` -- Medium -- Create an API client generated from OAS to improve type consistency
 - `NIM-18450` -- High -- Extensions – security
 - `NIM-18629` -- Highest -- Follow up on AQL/PSQL queries
-- `NIM-18696` -- High -- [NAE] Add support for Multi-Segment/tenant SD-WAN routing 7.5
+- `NIM-18696` -- High -- Add support for Multi-Segment/tenant SD-WAN routing 7.5
 - `NIM-18856` -- High -- Add support for F5OS - basic vendor discovery of chassis information
 - `NIM-18869` -- Medium -- Discover Cisco 9300 switches running in cloud-native mode via Meraki API
 - `NIM-18897` -- Medium -- Cloud scaling groups
@@ -616,7 +617,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-16688` -- High -- Utilize Chromatic visual testing for Storybook - Execution Phase 1
 - `NIM-16703` -- Medium -- Apply attribute filters to Pathlookup sources endpoints
 - `NIM-17378` -- High -- Azure NAT Gateway - NAT support
-- `NIM-17451` -- Medium -- [FE] Extend discovery seeds settings – discovery history
+- `NIM-17451` -- Medium -- Extend discovery seeds settings – discovery history
 - `NIM-17529` -- Medium -- Add support for AAA on Cisco ACI (IPv4+IPv6)
 - `NIM-17537` -- Medium -- Add support for SNMP on Cisco ACI (IPv4 + IPv6)
 - `NIM-17542` -- Medium -- Add support for IPv6 ACL on Cisco IOS-XE
@@ -636,7 +637,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-18069` -- Medium -- Move `putSiteSeparationHandler` to ORM
 - `NIM-18070` -- Medium -- Move `sendParsingErrorsToCallhome` to ORM
 - `NIM-18081` -- Medium -- Unique serial number field in Interface table
-- `NIM-18115` -- Medium -- [FE] Add VRF as a possible linecap label to all L3 protocols
+- `NIM-18115` -- Medium -- Add VRF as a possible linecap label to all L3 protocols
 - `NIM-18209` -- Low -- Include paths with parameters in generated api client
 - `NIM-18210` -- Medium -- Include tables in generated api client
 - `NIM-18227` -- Medium -- Bring our ssh2 fork up to date
@@ -661,7 +662,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-18802` -- Medium -- Create a variant of Select component with mandatory value
 - `NIM-18811` -- Medium -- URL Filtering is not shown in the ZoneFW Table
 - `NIM-18812` -- High -- Analyse getArangoModels in API Controllers - PART 2
-- `NIM-18842` -- Medium -- [FE] Rename "Snapshot Retention" page
+- `NIM-18842` -- Medium -- Rename "Snapshot Retention" page
 - `NIM-18853` -- Medium -- F5OS API clients and basic backend support
 - `NIM-18854` -- Medium -- F5OS API Clients frontend and full backend support
 - `NIM-18884` -- Medium -- Update Intent Rules
@@ -672,15 +673,15 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-18915` -- Medium -- Cisco APIC - service graph - extend redirection for vlan
 - `NIM-18918` -- Medium -- Make Sentry display the original error text
 - `NIM-18920` -- Medium -- Re-enable UI system update notifications
-- `NIM-18921` -- Medium -- [backend] make links in diagram bi-directional
+- `NIM-18921` -- Medium -- make links in diagram bi-directional
 - `NIM-18922` -- Medium -- Test F5OS All tenants on one server need to be discovered (prevent SN duplicates)
 - `NIM-18923` -- High -- [backend] Add support for manual link portchannels in e2e
 - `NIM-18926` -- Medium -- Compress large received data items
 - `NIM-18933` -- Medium -- Convert arango export to PSQL
 - `NIM-18941` -- Medium -- Invalidate callhome commands older than 6.8 and tasks older than 6.9
-- `NIM-18946` -- Medium -- [Backend] Add Postgres implementation for manual links and virtual wire in e2e
+- `NIM-18946` -- Medium -- Add Postgres implementation for manual links and virtual wire in e2e
 - `NIM-18947` -- Medium -- Investigate and fix getMacAqlNoTagOnRouter (arangoTaskerCalcSwitchRouterVlansDataProvider)
-- `NIM-18948` -- High -- [BE] Perform MAC lookup for traffic sending over manual link
+- `NIM-18948` -- High -- Perform MAC lookup for traffic sending over manual link
 - `NIM-18958` -- High -- Bidirectional manual links create loops
 - `NIM-18959` -- Medium -- AWS API - syntax check for all assume roles
 - `NIM-18971` -- Medium -- Fix `getAllSnapshots` query failing tests
@@ -691,7 +692,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-18994` -- Medium -- AWS subnets
 - `NIM-18995` -- Medium -- GCP subnets
 - `NIM-19017` -- Highest -- Investigate failing e2e pathlookup tests in postgres mode
-- `NIM-19028` -- Medium -- [backend] Manual link constrain validation - avoid create two links between same devices and same ports, links are bidirectional by default
+- `NIM-19028` -- Medium -- Manual link constrain validation - avoid create two links between same devices and same ports, links are bidirectional by default
 - `NIM-19047` -- High -- 7 - Important - IPF License Key World-Readable
 - `NIM-19048` -- High -- 8 - Important - Sensitive Information Disclosed in System Logs
 - `NIM-19066` -- Medium -- Finish RFC21 (Independent product versioning) and create implementation tasks stemming from RFC
@@ -754,7 +755,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-19299` -- Medium -- Optimize "/tables/interfaces/port-channel/member-status" API table performance when many snapshots are loaded
 - `NIM-19300` -- Medium -- Optimize "/tables/inventory/phones" API table performance when many snapshots are loaded
 - `NIM-19301` -- Medium -- [frontend] Prepare manual link scenario for MQ
-- `NIM-19302` -- High -- [FE] Redesign Snapshot Management to better show more loaded snapshots
+- `NIM-19302` -- High -- Redesign Snapshot Management to better show more loaded snapshots
 - `NIM-19318` -- Medium -- Switch Postgres feature flags on by default
 - `NIM-19319` -- Medium -- Switch OAS to be generated from PSQL
 - `NIM-19322` -- Medium -- Fix `getApClientByHash` query failing tests
