--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -282,5 +282,5 @@ In previous versions, optional fields were omitted from certain API responses if
 - **Added documentation link** to Support Menu: `API Documentation`
 - **Enhanced Feature Matrix** with IPv6 support indicators:
   - Added toggle filter to show/hide IPv6 support information  
-- The current status of the PostgreSQL database is now displayed on the [Status Page](../../../IP_Fabric_GUI/tips/system_status) page.
+- The current status of the PostgreSQL database is now displayed on the [Status Page](../../IP_Fabric_GUI/tips/system_status.md) page.
   - From this page, users can also restart the PostgreSQL database if necessary.
