MQ-8339: Update hashes and LLRN for 7.3.18 GA

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -43,24 +43,29 @@ In version `7.3`, we introduced support for the Cisco NX-OS `show ip route detai
 If you're experiencing extended discovery times (9+ hours), this issue is likely the cause. As a temporary workaround, disable the **Routing table** task for affected devices (SNs or whole NX-OS family) under:
 **Settings → Discovery & Snapshots → Discovery Settings → Disabled Discovery Tasks**.
 
-## v7.3.17 (August 7th, 2025; GA)
+## v7.3.18 (August 27th, 2025; GA)
 
 ```
-SHA256 (ipfabric-update-7-3-17+0.tar.zst.sig) = 1c280f2bdf72ea256167c022ec0096e44c44688426fa47b10831735118a1f4ca
-MD5 (ipfabric-update-7-3-17+0.tar.zst.sig) = 5a58c1b0ece3a7c05d1dc011234e090d
-SHA256 (ipfabric-7-3-17+0.qcow2) = e100a57b2151827da43f8b96d18312747cfb1e054782f5a7a8926ed605f3053c
-MD5 (ipfabric-7-3-17+0.qcow2) = 135424ff72356535c7ae9a9c0a588c7a
-SHA256 (ipfabric-7-3-17+0.vmdk) = a805b3a5a3e8bcbf57e8b90c97cf55df2dd3eaed4c7dfbac36a7b88deefd60db
-MD5 (ipfabric-7-3-17+0.vmdk) = 047b36faac758a19177691040506554d
-SHA256 (ipfabric-7-3-17+0.vhdx.zst) = 2bd4b11a365d0ff00d4fbff397bd9d577406588e51e23decbcaf6a3b57dc3ef2
-MD5 (ipfabric-7-3-17+0.vhdx.zst) = 9ddd3dd5590cf0348436fe3aae895592
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-17+0.ova) = 1eb90d2279396b939c6c43163b0fb6552833f7a07736f29ca73e93bf5f90e18a
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-17+0.ova) = 714b398878726a9098e90d72c042ee37
-SHA256 (unsupported-ESXi7.0-ipfabric-7-3-17+0.ova) = 0a24db2aa8ab809bad8a703c61f4bf7fb6fb7163ee1ba3fdc998f16311a33edc
-MD5 (unsupported-ESXi7.0-ipfabric-7-3-17+0.ova) = cba45f7a5f4c6ac5acee00ed97eb64aa
-SHA256 (ESXi8.0-ipfabric-7-3-17+0.ova) = e40842bad289ebe61ffecd346f7bd07deb15d57b526e7d7b89a16416f1646b15
-MD5 (ESXi8.0-ipfabric-7-3-17+0.ova) = 8b990985a771d1db552f5f035b9aa6d7
+SHA256 (ipfabric-update-7-3-18+0.tar.zst.sig) = 5050ed0d1caec4f7771f8034c0e76ad7f34d8911909bf33fce2dd6db2e6f48fb
+MD5 (ipfabric-update-7-3-18+0.tar.zst.sig) = 69699b0add719cc3b4f0493016f6c0f6
+SHA256 (ipfabric-7-3-18+0.qcow2) = 58c388e89370e4c4681d49c8f4b876c7e6c8a20303e4c835325dde5d174c3d04
+MD5 (ipfabric-7-3-18+0.qcow2) = a4aff5f1211b0cf89731ff0ecf1654a7
+SHA256 (ipfabric-7-3-18+0.vmdk) = 34466cb9747f3030297a941e7a448480d2c1fb887048bf535fc378311ab34aa4
+MD5 (ipfabric-7-3-18+0.vmdk) = ae92dea4cd8d6c5421a6ecd1565685a9
+SHA256 (ipfabric-7-3-18+0.vhdx.zst) = 076f2cf22b2e64adda518c844a0931d3438f93b2693c2c0c4a4939c8cb2771ab
+MD5 (ipfabric-7-3-18+0.vhdx.zst) = 7cdd7ea749d88813706890f8ee8bf2a3
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-18+0.ova) = 97fb99338e9839817869607f7b4d0fc0bf397accc3373ccfd2cf2f4789408e8e
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-18+0.ova) = bc9cd45263e3f0a75dd3551f78554f4e
+SHA256 (unsupported-ESXi7.0-ipfabric-7-3-18+0.ova) = bffabd06b319fcac06fd0081511032707e89a67df3cc63a7de375ae7faafc030
+MD5 (unsupported-ESXi7.0-ipfabric-7-3-18+0.ova) = dcab252cedbda26b2560a57edbe638ab
+SHA256 (ESXi8.0-ipfabric-7-3-18+0.ova) = 8d20f4bbb853f34144842a295bfaebd0958fc6e764f4e3e86b947835afe2dd97
+MD5 (ESXi8.0-ipfabric-7-3-18+0.ova) = eb5f7ce4214f641ca5b1693b82861f0a
 ```
+### Improvements
+
+An enhanced version of the `ipf-checker` was introduced with new performance tests to ensure readiness for the upcoming PostgreSQL database release.
+
+## v7.3.17 (August 7th, 2025; GA)
 
 ### Fixes
 
