CHERRY-PICK-7.3-MQ-8339-publish-LLRN-and-hashes-7.3.19

--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -6,7 +6,32 @@ search:
 
 # LLRN 7.3
 
-These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 588 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 599 fixed issues.
+
+
+## 7.3.18
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-18525` -- High -- Slow queries on Silverpeak-Overlay causes failed discovery and Overlay table can't be loaded
+- `NIM-19673` -- Medium -- Cisco Stack Standby Member Shows Incorrect Serial Number
+- `NIM-19859` -- Highest -- worker@1 heap out of memory during Versa discovery
+- `NIM-20099` -- High -- SyslogWorker removing devices from discovery history
+- `NIM-20889` -- High -- First Hop Algorithm form: clicking in Hostname typeahead dropdown does not set the value
+- `NIM-20920` -- Highest -- Updater reaches heap allocation limit while loading snapshot with full BGP tables
+- `NIM-21015` -- High -- BGP Advertised Routes still failing
+- `NIM-21053` -- Highest -- Scan worker stuck - doesn't get to Init event received, starting
+- `NIM-21057` -- High -- VERSA: Model Name field is empty in IPF GUI
+- `NIM-21074` -- Highest -- Scan worker exiting with code 246 upon discovery finish
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-20956` -- High -- Get all e2e path tests passing on 7.3 & 7.5 branches
+- `NIM-20984` -- High -- Do not mask AWS assume role
 
 ## 7.3.17
 
@@ -656,7 +681,6 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-17403` -- High -- Create ipf-discovery-after-restart service
 - `NIM-17446` -- Medium -- [backend] Update eEdge collection from manual link topology
 - `NIM-17462` -- Medium -- Discovery Tasks Settings Doc - Has not been updated to include ACI Endpoints
-- `NIM-17523` -- Medium -- [NAE] Get ts from DHL, analyze and test.
 - `NIM-17526` -- Medium -- Add support for Neighbor discovery on Cisco ASA
 - `NIM-17527` -- Medium -- Add support for IPv6 AAA on Cisco IOS-XE
 - `NIM-17528` -- Medium -- Add support for IPv6 AAA on Cisco ASA
