NIM-21191 Update docs with removal of the vdc-devices table

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -272,6 +272,12 @@ In previous versions, optional fields were omitted from certain API responses if
 - Regular expressions now use the **POSIX** standard instead of **ECMAScript**: saved filters and intent checks using `reg`, `nreg`, `ireg`, `nireg` operations may be affected
 - Type coercion is no more supported (e.g. string `'123'` will not pass validation if a number is expected)
 
+#### Removed Technology Tables
+
+- The following previously deprecated table has been removed:
+  - **Table:** `/technology/platforms/vdc/vdc-devices`
+  - **API endpoint:** `/tables/platforms/vdc/devices`
+
 ### Other Changes
 
 - Feature flag [`ENABLE_ACI_FVTENANT_ENDPOINT`](../../System_Administration/Command_Line_Interface/Feature_Flags.md#aci-fvtenant-api-endpoint-removed-in-75) **was removed**
