NIM-21296 improve F5os in releasenotes

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -27,7 +27,7 @@ description: In this section, you can find the release notes for `v7.5` releases
 
 ## Upgrade Guide for **7.5** Release
 
-This guide walks you through a safe, in-place upgrade from IP Fabric `v7.3` (or newer) to `v7.5`,  
+This guide walks you through a safe, in-place upgrade from IP Fabric `v7.3` (or newer) to `v7.5`,
 which in turn migrates the database from **ArangoDB** to **PostgreSQL**.
 ---
 
@@ -56,7 +56,7 @@ Follow the steps in order. **Do not interrupt the process** once Step 4 (Launch 
     1. Shut down the appliance gracefully [from the CLI](../../System_Administration/Command_Line_Interface/How_to/troubleshooting.md#reboot-and-shutdown).
     2. Create a cold snapshot in your hypervisor; verify its completion.
     3. Power the appliance back on.
-    
+
 ??? note "Step 3 - Launch the `v7.5` Upgrade"
     1. Follow [offline update manual](../../System_Administration/system_update.md#offline-update) or set [EA release channel](#release-channels) to receive online updates.
     2. The upgrade will:
@@ -198,6 +198,14 @@ Network Function Groups and connectivity to Direct Connect Gateways, will be add
       },
       ```
 
+#### F5OS
+
+- **F5OSa & F5OSc** -- Basic API discovery support is available for both F5OS systems. As these systems run on F5 chassis, we have implemented support primarily for inventory, SN, and devInfo tasks. Network coverage is limited. Complex management and inventory of chassis and its objects is planned for future releases.
+
+!!! Warning "Discovery via api"
+
+    F5OS is discovered via API. You need to configure API vendors for successful discovery. Otherwise, all tenants running TMOS are discovered using SSH.
+
 ### Improvements
 
 #### GUI
@@ -284,9 +292,9 @@ In previous versions, optional fields were omitted from certain API responses if
 - **Routing tables** in Device Explorer **were renamed**:
   - `Cumulative IPv4 routing table` → **IPv4 routing table**
   - `Cumulative IPv6 routing table` → **IPv6 routing table**
-  *(Data, URLs, and structure remain unchanged; original names were misleading)*  
+  *(Data, URLs, and structure remain unchanged; original names were misleading)*
 - **Added documentation link** to Support Menu: `API Documentation`
 - **Enhanced Feature Matrix** with IPv6 support indicators:
-  - Added toggle filter to show/hide IPv6 support information  
+  - Added toggle filter to show/hide IPv6 support information
 - The current status of the PostgreSQL database is now displayed on the [Status Page](../../IP_Fabric_GUI/tips/system_status.md) page.
   - From this page, users can also restart the PostgreSQL database if necessary.
