ST-503: reword the checker article

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -6,14 +6,26 @@ description: In this section, you can find the release notes for `v7.3` releases
 
 --8<-- "snippets/upgrade_version_policy.md"
 
-!!! danger "Required Steps Before Upgrading to `v7.5`"
+!!! danger "Before Upgrading to `v7.5`"
 
     The upcoming `v7.5` release introduces a new PostgreSQL-based database, which brings updated hardware requirements.
-    To ensure stability and optimal performance after the upgrade, we strongly recommend using directly attached SSD or NVMe storage.
-    To assess your current hardware performance, use our [ipf-checker](../../System_Administration/Command_Line_Interface/ipf_checker.md) tool by running `sudo ipf-checker -d -s`.
+    To ensure stability and optimal performance after the upgrade, we strongly recommend **using directly attached SSD or NVMe storage**.
 
-    **WARNING**: The test may take a long time to complete. The default timeout is 45 minutes. We recommend avoiding any use of the IP Fabric appliance while the test is running.
+    To evaluate your current system's readiness, please run the hardware assessment tool manually using the following command:
 
+    ```
+    sudo ipf-checker -d -s
+    ```
+
+    Please share the results with our Customer Support team. As performance baselines are still being established, we will need to review each result individually.
+
+    You can provide the results by:
+
+    1. **Generating a Techsupport file** with System logs only after running the command, or
+
+    2. **Copying the terminal output** into a text file.
+
+    Please ensure you create a ticket in our [Customer Support Portal](https://support.ipfabric.io) and attach the results file for our analysis.
 
 --8<-- "snippets/clear_browser_cache.md"
 
