--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -39,7 +39,7 @@ which in turn migrates the database from **ArangoDB** to **PostgreSQL**.
 | **Hardware** | **Ideally directly attached NVMe storage is necessary.** Minimum requirements: **8 vCPU, 32 GB RAM**.<div class="admonition info"><p class="admonition-title">Why NVMe?</p><p>PostgreSQL’s performance relies heavily on fast random I/O. Rotary (HDD) storage is no longer supported for production.</p></div> |
 | **Downtime** | Plan a maintenance window of **2+ hours**, depending on snapshot sizes, amount and hardware performance. |
 | **Backup** | Take a **hypervisor snapshot** *after shutting down* the VM (cold snapshot). |
-| **Benchmark** | Run `ipf-checker` to measure disk performance. This is an informational test only. (**Note:** The test saturates the appliance, takes approximately 5-6 minutes, and should be scheduled during off-hours.) |
+| **Benchmark** | Run `sudo ipf-checker -d -s` to measure disk performance. This is an informational test only. (**Note:** The test saturates the appliance, takes approximately 5-6 minutes, and should be scheduled during off-hours.) |
 | **Customer Support** | Have your IP Fabric Support contact handy in case questions arise. You can also [submit a ticket](https://ipfabric.atlassian.net/servicedesk/customer/portal/1) to our service desk. |
 
 ---
