Versa routing known issue

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -55,6 +55,10 @@ In version `7.3`, we introduced support for the Cisco NX-OS `show ip route detai
 If you're experiencing extended discovery times (9+ hours), this issue is likely the cause. As a temporary workaround, disable the **Routing table** task for affected devices (SNs or whole NX-OS family) under:
 **Settings → Discovery & Snapshots → Discovery Settings → Disabled Discovery Tasks**.
 
+#### Versa Routing Table Missing MPLS Labels
+
+A bug was introduced in version 7.3.18 that affects Versa devices. Their routing tables no longer include MPLS label information, which causes path lookups through these devices to fail.
+
 ## v7.3.18 (August 27th, 2025; GA)
 
 
