--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -36,7 +36,7 @@ which in turn migrates the database from **ArangoDB** to **PostgreSQL**.
 | Item | Requirement |
 |------|-------------|
 | **Supported Starting Version** | Your appliance must be on the latest version of **v7.3**. |
-| **Hardware** | **Ideally directly attached NVMe storage is necessary.** Minimum requirements: **8 vCPU, 32 GB RAM**.<div class="admonition info"><p class="admonition-title">Why NVMe?</p><p>PostgreSQL’s performance relies heavily on fast random I/O. Rotary (HDD) storage is no longer supported for production.</p></div> |
+| **Hardware** | **We highly recommend using directly attached NVMe storage.** Minimum requirements: **8 vCPU, 32 GB RAM**. For more information, see [Hardware Requirements](../../overview/index.md#hardware-requirements). <div class="admonition info"><p class="admonition-title">Why NVMe storage?</p><p>PostgreSQL’s performance relies heavily on fast random I/O. Rotary (HDD) storage is no longer supported for production.</p></div> |
 | **Downtime** | Plan a maintenance window of **2+ hours**, depending on snapshot sizes, amount and hardware performance. |
 | **Backup** | Take a **hypervisor snapshot** *after shutting down* the VM (cold snapshot). |
 | **Benchmark** | Run `sudo ipf-checker -d -s` to measure disk performance. This is an informational test only. (**Note:** The test saturates the appliance, takes approximately 5-6 minutes, and should be scheduled during off-hours.) |
