NIM-21328 Payload size limit

--- a/docs/releases/release_notes/7.6.md
+++ b/docs/releases/release_notes/7.6.md
@@ -1,6 +1,5 @@
 ---
 description: In this section, you can find the release notes for `v7.6` releases.
-tags: ["draft"]
 ---
 
 # IP Fabric `v7.6`
@@ -53,6 +52,21 @@ tags: ["draft"]
 #### Vendor Support
 
 .
+
+### API Changes
+
+#### Endpoint payload size limit
+
+The payload size limit has been introduced with a default of 20 MB, except for the following endpoints with their respective limits:
+
+- `/appliance-configuration/import` -> 100 MB
+- `/extensions/docker-image` -> 2 GB
+- `/extensions/docker-zip` -> 10 GB
+- `/licenses/upload` -> 5 MB
+- `/snapshots/upload` -> 10 GB
+- `/graphs/vsdx` -> 25 MB
+- `/os/upload-nimpee-cert` -> 5 MB
+- `/settings` (PATCH) -> 100 MB
 
 ### API Endpoint Deprecation
 
